--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500&display=swap");
 
 * {
   margin: 0;
@@ -7,8 +7,8 @@
 
 body {
   font-family: sans-serif;
-  color: #fff;
-  background-image: url("img/Portada1.jpeg");
+  background-image: url("img/Mishell.jpeg");
+  transition: background-image 1s ease; /* Ajusta la duración y la función de temporización según tus preferencias */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -17,15 +17,13 @@ body {
 
 .logo-container {
   display: flex;
-  margin-bottom: 10px;
-  align-items: center;
-  justify-content: center;
+  padding-left: 5%;
+  padding-top: 2%;
 }
 
 .logo {
   width: 150px;
   height: 100px;
-
   opacity: 0.7;
   border-radius: 5px;
 }
@@ -41,12 +39,15 @@ nav ul {
 }
 
 nav ul li {
-  font-size: 18px;
+  font-size: 30px;
+  font-family: "Dancing Script";
+  background-color: #f4d03f;
+  padding: 5px;
 }
 
 nav ul li a {
   text-decoration: none;
-  color: #fff;
+  color: black;
 }
 
 article {
@@ -61,6 +62,7 @@ article h1 {
   font-size: 80px;
   margin-bottom: 50px;
   font-family: "Dancing Script";
+  color: #fff;
 }
 
 article p a {
