--- a/contacto.css
+++ b/contacto.css
@@ -15,15 +15,13 @@ body {
 
 .logo-container {
   display: flex;
-  margin-bottom: 10px;
-  align-items: center;
-  justify-content: center;
+  padding-left: 5%;
+  padding-top: 2%;
 }
 
 .logo {
   width: 150px;
   height: 100px;
-
   opacity: 0.7;
   border-radius: 5px;
 }
@@ -39,19 +37,22 @@ nav ul {
 }
 
 nav ul li {
-  font-size: 18px;
+  font-size: 30px;
+  font-family: "Dancing Script";
+  background-color: #f4d03f;
+  padding: 5px;
 }
 
 nav ul li a {
   text-decoration: none;
-  color: #fff;
+  color: #000;
 }
 
 article {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 70vh;
+  height: 69vh;
 }
 
 form {
