--- a/contacto.css
+++ b/contacto.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500&family=Hedvig+Letters+Serif:opsz@12..24&family=Saira+Extra+Condensed:wght@300&display=swap");
+
 * {
   margin: 0;
   padding: 0;
