Modificado la foto del header en los css

--- a/contacto.css
+++ b/contacto.css
@@ -8,7 +8,7 @@
 body {
   font-family: sans-serif;
   color: #fff;
-  background-image: url("img/Portada1.jpeg");
+  background-image: url("img/PaisajePortada.jpeg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
