--- a/portfolio.css
+++ b/portfolio.css
@@ -12,7 +12,7 @@ body {
 
 header {
   height: 100%;
-  background-image: url("img/Portada1.jpeg");
+  background-image: url("img/PaisajePortada.jpeg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
