--- a/sobreMi.css
+++ b/sobreMi.css
@@ -13,7 +13,7 @@ body {
 
 header {
   height: 100%;
-  background-image: url("img/Portada1.jpeg");
+  background-image: url("img/PaisajePortada.jpeg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -69,7 +69,7 @@ article {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 70vh;
+  height: 80vh;
 }
 
 article div {
