--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@
 
 body {
   font-family: sans-serif;
-  background-image: url("img/Mishell.jpeg");
+  background-image: url("img/light1.jpeg");
   transition: background-image 1s ease; /* Ajusta la duración y la función de temporización según tus preferencias */
   background-size: cover;
   background-position: center;
